<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gym App</string>
    <string name="login_text">Iniciar Sesión</string>
    <string name="password_hint">Contraseña</string>
    <string name="confirm_password_hint">Confirmar Contraseña</string>
    <string name="user_hint">Email</string>
    <string name="login_button">INGRESAR</string>
    <string name="logout_text">Cerrar Sesión</string>
    <string name="saludo">Hola %s</string>
    <string name="register_title">Registrarse</string>
    <string name="register_button">Registrarme</string>
    <string name="goal_hint">Meta</string>
    <string name="weight_hint">Peso actual</string>
    <string name="name_hint">Nombre</string>
    <string name="arrow_return_description">arrow return</string>
    <string name="title_activity_exercises">Todos los ejercicios</string>
    <string name="beginner_tab_text">Principiante</string>
    <string name="intermediate_tab_text">Intermedio</string>
    <string name="advanced_tab_text">Avanzado</string>
    <string name="absBeginner">Abdominales Principiante</string>
    <string name="chestBeginner">Pecho Principiante</string>
    <string name="armBeginner">Brazo Principiante</string>
    <string name="legBeginner">Piernas Principiante</string>
    <string name="backAndShoulderBeginner">Espalda y hombro Principiantes</string>
    <string name="register_link">Registrate</string>
    <string name="app_name_title1">GYM</string>
    <string name="app_name_title2">APP</string>
    <string name="slogan">Sé una inspiración</string>
    <string name="login_link">Iniciar Sesión</string>
    <string name="already_has_acc">¿Ya tienes una cuenta?</string>
    <string name="not_acc">¿No tienes una cuenta?</string>
    <string name="alt_logo">Logo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="next_fragment">SIGUIENTE</string>
    <string name="prev_fragment">ATRAS</string>
    <string name="loading_text" tools:ignore="Typos">Espere un momento…</string>
    <string name="finalizeObBtn">Finalizar</string>
    <string name="homeMenuTitle">Home</string>
    <string name="exercisesMenuTitle">Exercises</string>
    <string name="shopMenuTitle">Shop</string>
    <string name="accountMenuTitle">Perfil</string>
    <string name="step_text_wight">Paso 2</string>
    <string name="step_text">Paso 3</string>
    <!-- Exercises -->
    <string name="absIntermediate">Abdominales Intermedio</string>
    <string name="chestIntermediate">Pecho Intermedio</string>
    <string name="armIntermediate">Brazo Intermedio</string>
    <string name="legIntermediate">Pierna Intermedio</string>
    <string name="backAndShoulderIntermediate">Espalda y hombro Intermedio</string>
    <string name="absAdvanced">Abdominales Avanzado</string>
    <string name="chestAdvanced">Pecho Avanzado</string>
    <string name="armAdvanced">Brazo Avanzado</string>
    <string name="legAdvanced">Pierna Avanzado</string>
    <string name="backAndShoulderAdvanced">Espalda y hombro Avanzado</string>
    <!-- Exercises Description -->
    <string name="default_title_type_description">Abdominales</string>
    <string name="default_description_title">Dia 01: Calentamiento</string>
    <string name="default_description_subtitle">Ejercicios %1$s</string>
    <string name="default_time_text">%1$d min</string>
    <string name="default_cal">%1$d cal</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel egestas dolor, nec dignissim metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel egestas dolor, nec dignissim metus.</string>
    <string name="default_video_text">Calentamiento sencillo</string>
    <string name="addExercise">Agregar Ejercicio</string>
    <!--Mi perfil-->
    <string name="MisDatosTXT">Perfil</string>
    <string name="MiSoport">Soporte</string>
    <string name="MisFavoritosTXT">Mis favoritos</string>
    <string name="MisRutinasTXT">Mis Rutinas</string>
    <string name="uidDato">UID</string>
    <string name="nombreDato">Nombre</string>
    <string name="apellidoDato">Apellido</string>
    <string name="correoDato">Correo</string>
    <string name="IMCTXT">Indice de Masa Corporal</string>
    <string name="passwordDato">Contraseña</string>
    <string name="edadDato">Edad</string>
    <string name="generoDato">Género</string>
    <string name="pesoDato">Peso</string>
    <string name="alturaDato">Altura</string>
    <string name="IMC">IMC</string>
    <string name="perfilimg">perfilimg</string>
    <string name="volverACalcularIMCTXT">Volver a Calcular el IMC</string>
    <string name="cerrarSesion"><u>Cerrar sesión de su cuenta</u></string>
    <string name="nombre">%s</string>
    <string name="mi_perfil">Mi perfil</string>

    <!--home-->
    <string name="profile">Perfil</string>
    <string name="notificaciom">Notificaciones</string>
    <string name="personalizado">Ejercicios personalizados</string>
    <string name="principiantes">Ejercicios principiantes</string>
    <string name="intermedios">Ejercicios intermedios</string>
    <string name="avanzados">Ejercicios avanzados</string>


    <!--Contactános-->
    <string name="contactanosTXT">Contactános</string>
    <string name="nombreYApellidoTXT">Nombre y apellido</string>
    <string name="nombreYApellido">Nombre y apellido</string>
    <string name="emailTXT">Email</string>
    <string name="email">Email</string>
    <string name="escribaSuMensajeAquiTXT">Escriba su mensaje aquí…</string>
    <string name="escribaSuMensajeAqui">Escriba su mensaje aquí…</string>
    <string name="mealsTitle">Plan de comidas saludables</string>
    <!-- Routine -->
    <string name="add_button">Add item</string>
    <string name="mis_rutinas">Mis rutinas</string>

    <string name="TitleEcommerce">Elige el plan que se adapte a vos</string>
    <string name="TitlePbasic">Beginner Plan</string>
    <string name="TitlePlanM">Toned Body Plan</string>
    <string name="TitlePlanA">Shape y Build Plan</string>
    <string name="Price">$8000</string>
    <string name="PriceM">$12000</string>
    <string name="PriceA">$17000</string>
    <string name="DescriptionPB">Una forma estupenda de empezar tu viaje hacia una vida más sana y flexible</string>
    <string name="DescriptionPM">Pierde peso rápidamente. Tonifica, esculpe y mejora tu forma física</string>
    <string name="DescriptionPA">Tonifica, desarrolla músculo y hazte más fuerte donde más te importa</string>
    <string name="carrito">Mi Carrito</string>
    <string name="comprar">Ir a pagar</string>
    <string name="vaciar_carrito">Vaciar carrito</string>
    <string name="cambiar_plan">Cambiar plan</string>

    <!-- Exercise/Routine -->
    <string name="exercise_title_item">Exercise title</string>
    <string name="favoritebtn">favorite</string>
    <string name="routine_title_item">Routine title</string>
    <string name="delete_button_item">delete</string>
    <!--Favoritos-->
    <string name="titleFav">Mis favoritos</string>

    <!--header-->
    <string name="cart_button_description">Carrito</string>

    <!--CRUD ADMIN-->
    <string name="addPlan">Agregar un nuevo plan</string>
    <string name="editPlan">Editar Plan</string>
    <string name="deletePlan">Eliminar Plan</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="ponte_en_contacto_con_nosotros">Ponte en contacto con Nosotros</string>


    <string name="cartCheckout">Checkout</string>
    <string-array name="installment_options">
        <item>1 cuota</item>
        <item>3 cuotas</item>
        <item>6 cuotas</item>
        <item>12 cuotas</item>
    </string-array>




</resources>