<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F212E"
    tools:context=".views.activities.ExerciseList">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <ImageButton
                android:id="@+id/arrow_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cart_button_description"
                android:padding="12dp"
                android:src="@drawable/bsckarrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="289dp"
                android:layout_height="28dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/title_activity_exercises"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/arrow_return"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/exercises_difficult_tabs"
        android:layout_width="379dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:background="#1F212E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:tabIndicatorColor="@color/buttonColor"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/beginner_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginner_tab_text"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="123dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/intermediate_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intermediate_tab_text"
            tools:layout_editor_absoluteX="141dp"
            tools:layout_editor_absoluteY="119dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/advanced_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_tab_text"
            tools:layout_editor_absoluteX="275dp"
            tools:layout_editor_absoluteY="123dp" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerExercises"
        android:layout_width="416dp"
        android:layout_height="579dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercises_difficult_tabs" />


</androidx.constraintlayout.widget.ConstraintLayout>