<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:backgroundTintMode="add"
    tools:context=".views.activities.MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_Navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="1dp"
        android:background="@color/backgroundColor"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:labelVisibilityMode="selected"
        app:menu="@menu/bottom_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_Navigation"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="-22dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-39dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/logoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_marginTop="36dp"
                android:text="GymApp"
                android:textColor="#DC3545"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:layout_marginTop="120dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/personalizado"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoTextView"
                app:srcCompat="@drawable/home" />

            <Button
                android:id="@+id/btnAcquirePlan"
                android:layout_width="112dp"
                android:layout_height="48dp"
                android:layout_marginStart="211dp"
                android:layout_marginTop="54dp"
                android:background="@drawable/button_background"
                android:onClick="textoClickeable"
                android:text="Adquiri tu plan"

                android:textColor="#151720"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <Button
                android:id="@+id/btnOpenWebsite"
                android:layout_width="112dp"
                android:layout_height="48dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/rounded_blue"
                android:onClick="textoClickeable"
                android:text="Ir a GymApp Web"
                android:textColor="#DC3545"
                android:textSize="15sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/btnAcquirePlan" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/buttonColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnOpenWebsite" />

            <TextView
                android:id="@+id/mainTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:text="Bienvenidos"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoTextView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:text="Plan de Ejercicios Diarios"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/imageView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainTextTitle"
                app:layout_constraintVertical_bias="0.753" />

            <HorizontalScrollView
                android:id="@+id/scrollView2"
                android:layout_width="394dp"
                android:layout_height="206dp"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/mainTextTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="240dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/principiantes"
                        android:scaleType="fitXY"
                        android:src="@drawable/principiantes" />

                    <ImageView
                        android:layout_width="240dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/intermedios"
                        android:scaleType="fitXY"
                        android:src="@drawable/intermedio" />

                    <ImageView
                        android:layout_width="240dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/avanzados"
                        android:scaleType="fitXY"
                        android:src="@drawable/avanzado" />

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="openDiet"
                android:padding="12dp"
                android:text="Crea tu plan de alimentación semanal"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView"
                android:layout_width="360dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:shapeAppearanceOverlay="@style/imageView"
                app:srcCompat="@drawable/dieta"
                app:strokeColor="@null" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>
